[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/actors/peixito/peixe.tres" type="Texture" id=1]
[ext_resource path="res://assets/actors/peixito/peixe1.tres" type="Texture" id=2]
[ext_resource path="res://src/animations/bounce.tres" type="Animation" id=3]
[ext_resource path="res://src/enemis/peixito.gd" type="Script" id=4]
[ext_resource path="res://src/animations/Dying.tres" type="Animation" id=5]
[ext_resource path="res://assets/actors/peixito/peixe_smile.tres" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "smile",
"speed": 1.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 29.9998
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "bouncing"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("coin:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.8 ),
"transitions": PoolRealArray( 0.277392, 1.86607, 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 60.0

[node name="Peixito" type="KinematicBody2D"]
position = Vector2( 128, 72 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 4 )

[node name="AnimatedSpritePeixito" type="AnimatedSprite" parent="."]
position = Vector2( 0, 9.53674e-07 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -20, 10 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=[
"goals",
]]
anims/Dying = ExtResource( 5 )
anims/bounce = ExtResource( 3 )
anims/objectsbouncing = SubResource( 3 )

[node name="Catched" type="Area2D" parent="."]
position = Vector2( -20, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catched"]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -20, -40 )
[connection signal="body_entered" from="Catched" to="." method="_on_Catched_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
